change format of font import

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
         <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
-        <link href="%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIconsOutlined.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
         <!-- <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet"> -->
 
