--- a/public/index.html
+++ b/public/index.html
@@ -242,5 +242,7 @@
           To begin the development, run `npm start` or `yarn start`.
           To create a production bundle, use `npm run build` or `yarn build`.
         -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/css/drawflow.min.css" />
+
     </body>
 </html>
