change-sidebar-icons

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
         <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
-
+        <script src="https://kit.fontawesome.com/80549a2c37.js" crossorigin="anonymous"></script>
         <!-- <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet"> -->
 
         <noscript id="jss-insertion-point"></noscript>
