--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-        <script src="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow/dist/drawflow.min.js"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs=" crossorigin="anonymous"></script>
         <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jerosoler/Drawflow@0.0.48/dist/drawflow.min.css"> -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/drawflow@0.0.59/dist/drawflow.min.css" />
@@ -29,6 +29,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
         <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
         <script src="https://kit.fontawesome.com/80549a2c37.js" crossorigin="anonymous"></script>
+        <script src="https://fastly.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
         <!-- <link href="%PUBLIC_URL%/assets/fonts/meteocons/style.css" rel="stylesheet"> -->
 
         <noscript id="jss-insertion-point"></noscript>
