--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Dashboard | DeepTrade Platform</title>
+        <title>Dashboard | Tradeep.ai Platform</title>
 
         <!-- FUSE Splash Screen CSS -->
         <style type="text/css">
